--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -28,7 +28,7 @@
           </ul>
           <ul class="contacts-box__list">
             <li class="contacts-box__item">
-              <a class="contacts-box__link" href="tel:+61(0) 383 766 284"
+              <a class="contacts-box__link" href="tel:+61(0)383766284"
                 >+61(0) 383 766 284</a
               >
             </li>
@@ -66,7 +66,7 @@
           </ul>
           <ul class="contacts-box__list">
             <li class="contacts-box__item">
-              <a class="contacts-box__link" href="tel:+61(0) 383 766 284"
+              <a class="contacts-box__link" href="tel:+61(0)383766284"
                 >+61(0) 383 766 284</a
               >
             </li>
@@ -104,7 +104,7 @@
           </ul>
           <ul class="contacts-box__list">
             <li class="contacts-box__item">
-              <a class="contacts-box__link" href="tel:+61(0) 383 766 284"
+              <a class="contacts-box__link" href="tel:+61(0)383766284"
                 >+61(0) 383 766 284</a
               >
             </li>
