--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -293,6 +293,7 @@
   margin-top: auto;
   border: none;
   background-color: transparent;
+  transition: transform var(--anim);
 }
 .products__btn:hover .products__icon {
   transform: scale(1.4, 1);
