--- a/src/partials/hero-header.html
+++ b/src/partials/hero-header.html
@@ -104,7 +104,7 @@
 <main>
   <!-- hero -->
 
-  <section class="section-hero">
+  <section class="section-hero" id="go-up">
     <div class="container container-hero">
       <h1 class="hero-title">ice cream made with passion</h1>
 
@@ -272,6 +272,12 @@
         />
       </div>
     </div>
+    <a class="link-up" href="#go-up">
+      <svg class="arrow-up" width="14" height="14">
+        <use href="./images/sprite.svg#icon-arrow-up"></use>
+      </svg>
+      go <br />up
+    </a>
   </section>
 </main>
 <script>
